# xaynet

./: README.tpl
.github/workflows/: dockerhub-pr-with-parameters.yml
docker/: docker-compose.yml
rust/: Cargo.toml
rust/e2e/: Cargo.toml
rust/e2e/src/: k8s.rs  main.rs  term.rs  test_client.rs  utils.rs
rust/e2e/test_case/: config.toml  k8s.toml
rust/xaynet-client/src/api/: http.rs
rust/xaynet-client/src/mobile_client/: mod.rs
rust/xaynet-client/src/mobile_client/participant/: mod.rs
rust/xaynet-server/src/settings/: mod.rs
rust/xaynet-server/src/state_machine/: mod.rs
rust/xaynet-server/src/state_machine/phases/: sum2.rs  unmask.rs  update.rs
rust/xaynet-server/src/state_machine/tests/: mod.rs  utils.rs
rust/xaynet-server/src/storage/: redis.rs  s3.rs
