[package]
name = "e2e"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.13"
tokio = { version = "0.2.22", features = ["full"] }
reqwest = { version = "0.10.8", default-features = false, features = ["json", "gzip", "stream"] }
xaynet-client = { path = "../xaynet-client" }
xaynet-core = { path = "../xaynet-core" }
xaynet-server = { path = "../xaynet-server" }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
config = "0.10.1"
indicatif = "0.15.0"
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = { version = "0.4.15" }

kube = { version = "0.43.0", optional = true }
kube-runtime  = { version = "0.43.0", optional = true }
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_16"], optional = true }
serde_json = { version = "1.0.59", optional = true }

[features]
k8s = ["kube", "kube-runtime", "k8s-openapi", "serde_json"]
tls = ["xaynet-client/tls"]